# web-scrapping

./: Dockerfile  app.py  date_utils.py  extract.py  fetcher.py  mailBox.html  main.py  matches.csv  parser.py  practise.py  pyproject.toml  writer.py
