[tool.poetry]
name = "scrapper"
version = "0.1.0"
description = "web scrapping tool"
authors = ["Anwar Ahmed "]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
